-Bug fixes and improvements to DependenciesAttribute, PreviewAttribute, DependencyObserver and PropertyPathMonitory.
-Added strongly-typed property change notification to PropertyChangedBase.
-Fixed a bug in the SimpleContainer related to generic component registration.

V1 RTW
-The DefaultBinder will now throw on type activation failure.
-Made a change to the implementation of PresentationFrameworkModule.IsInDesignMode.
-Removed Silverlight Windsor support because it apparently never worked.
-Fixed some inconsistencies between the implementations of IStateManager by transforming various implementation methods into extension methods and adding a missing concept.
-Fixed an inconsistency in the Open extension method. Added an extension point to the DefaultViewStrategy that will make it easier to work with proxied models.
-A minor change to allow custom "rewriting" of the type that the DefaultBinder inspects. This will help with proxy scenarios. Just override GetModelType and return the underlying type. The same is true for DefaultViewStrategy. For the ActionFactory, override SelectMethods.
-Fixed bugs in the View.Context and View.Strategy attached properties.
-Fixed a bug in the AttachedEventTriggerParser.cs. We no longer query against dynamic assemblies.
-Fixed a bug in the DefaultWindowManager. Fixed some compile errors in the LOB samples that resulted from some recent API fixes.
-Added an IContainer interface which is a combination of IServiceLocator and IConfigurator. Implemented this on all the Adapters and registered this interface will all underlying containers. Fixed some bugs in the container adapter implementations.
-Added an interface, IExtendedPresenter, which represents all presenter related capabilities. It is implemented by PresenterBase.
-Fixed a major inconsistency with the IDispatcher and Execute APIs.
-Added an extension point to MultiPresenter and MultiPresenterManager to allow a subclass to alter the default partial shutdown behavior.