@@ -37,6 +37,7 @@ V1.1 RTW
 -Bug fixes and improvements to DependenciesAttribute, PreviewAttribute, DependencyObserver and PropertyPathMonitory.
 -Added strongly-typed property change notification to PropertyChangedBase.
 -Fixed a bug in the SimpleContainer related to generic component registration.
+-Added ILifecycleNotifier.AttemptingShutdown which gets fired before the CanShutdownCore method on PresenterBase is called.
 
 V1 RTW
 -The DefaultBinder will now throw on type activation failure.
